--- a/v903/day04-从对象角度获取synchronized升级过程/code/mayikt-threads/pom.xml
+++ b/v903/day04-从对象角度获取synchronized升级过程/code/mayikt-threads/pom.xml
@@ -21,11 +21,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <!--分析对象在JVM的大小和分布-->
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.10</version>
         </dependency>
     </dependencies>
 
