--- a/mayikt/SpringBoot/springboot05-mybatis/pom.xml
+++ b/mayikt/SpringBoot/springboot05-mybatis/pom.xml
@@ -52,6 +52,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.25</version>
 		</dependency>
+		<!--SpringBoot热部署配置 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
