Order订单服务——调用——>Member会员服务 通过注入RestTemplate和LoadBalanced注解实现动态负载均衡

--- a/mayikt/SpringCloud/springcloud01-eureak-server/src/main/resources/application.yml
+++ b/mayikt/SpringCloud/springcloud01-eureak-server/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8100
+  port: 8761
 eureka:
   #实例
   instance:
     #服务的唯一标识
-    appname: springcloud-eureak-server
+    appname: EurekaService
     #注册中心ip地址
     hostname: 127.0.0.1
   #客户端
