--- a/mayikt/SpringCloud/springcloud02-member/src/main/resources/application.yml
+++ b/mayikt/SpringCloud/springcloud02-member/src/main/resources/application.yml
@@ -9,7 +9,9 @@ eureka:
   client:
     service-url:
       #注册地址
-      defaultZone: http://localhost:8761/eureka
+      #defaultZone: http://localhost:8761/eureka
+      #集群注册地址
+      defaultZone: http://localhost:8761/eureka,http://localhost:8762/eureka
     #是否向eureak注册
     register-with-eureka: true
     #是否检索其他服务
