--- a/mayikt/SpringCloud/springcloud04-eureak-server-cluster/src/main/resources/application.yml
+++ b/mayikt/SpringCloud/springcloud04-eureak-server-cluster/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8761
+  port: 8762
 eureka:
   #实例
   instance:
@@ -10,9 +10,8 @@ eureka:
   #客户端
   client:
     service-url:
-      #defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-      defaultZone: http://${eureka.instance.hostname}:8762/eureka/
+      defaultZone: http://${eureka.instance.hostname}:8761/eureka/
     #是否向Eureka进行注册(集群的时候需要设置为 true)
     register-with-eureka: true
-    #是否检索其他服务(集群的时候需要设置为true)
+    #是否检索其他服务
     fetch-registry: true
