SpringCloud实现Eureak注册中心集群，相互注册

--- a/mayikt/SpringCloud/springcloud04-eureak-server-cluster/src/main/resources/application.yml
+++ b/mayikt/SpringCloud/springcloud04-eureak-server-cluster/src/main/resources/application.yml
@@ -15,3 +15,7 @@ eureka:
     register-with-eureka: true
     #是否检索其他服务
     fetch-registry: true
+  server:
+    #本地环境关闭自我保护机制，保证不可用服务及时剔除
+    enable-self-preservation: false
+    eviction-interval-timer-in-ms: 2000
