--- a/mayikt/SpringCloud/springcloud01-eureak-server/src/main/resources/application.yml
+++ b/mayikt/SpringCloud/springcloud01-eureak-server/src/main/resources/application.yml
@@ -16,3 +16,7 @@ eureka:
     register-with-eureka: true
     #是否检索其他服务(集群的时候需要设置为true)
     fetch-registry: true
+  server:
+    #本地环境关闭自我保护机制，保证不可用服务及时剔除
+    enable-self-preservation: false
+    eviction-interval-timer-in-ms: 2000
