--- a/mayikt/SpringCloud/springcloud01-eureka/springcloud03-order/pom.xml
+++ b/mayikt/SpringCloud/springcloud01-eureka/springcloud03-order/pom.xml
@@ -46,6 +46,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <!--springcloud openfeign客户端-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
     <!--管理依赖-->
     <dependencyManagement>
