--- a/mayikt/SpringCloud/springcloud04-project/springcloud10-parent/pom.xml
+++ b/mayikt/SpringCloud/springcloud04-project/springcloud10-parent/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -8,15 +9,22 @@
         <version>2.5.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.mayikt</groupId>
-    <artifactId>springcloud02-member</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>springcloud02-member</name>
-    <description>Demo project for Spring Boot</description>
+    <groupId>org.mayikt</groupId>
+    <artifactId>springcloud10-parent</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>springcloud10-api</module>
+        <module>springcloud10-member</module>
+        <module>springcloud10-order</module>
+    </modules>
+
     <properties>
-        <java.version>1.8</java.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
         <spring-cloud.version>2020.0.3</spring-cloud.version>
     </properties>
+
     <dependencies>
         <!--spring-web-->
         <dependency>
@@ -52,7 +60,6 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
-
     <!--管理依赖-->
     <dependencyManagement>
         <dependencies>
