SpringCloud Hystrix熔断器 服务降级 熔断 限流..

--- a/mayikt/SpringCloud/springcloud04-project/springcloud10-parent/springcloud10-api/springcloud10-order-api/pom.xml
+++ b/mayikt/SpringCloud/springcloud04-project/springcloud10-parent/springcloud10-api/springcloud10-order-api/pom.xml
@@ -10,6 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>springcloud10-order-api</artifactId>
+    <packaging>pom</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.mayikt</groupId>
+            <artifactId>springcloud10-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
