--- a/mayikt/SpringCloud/springcloud04-project/springcloud10-parent/pom.xml
+++ b/mayikt/SpringCloud/springcloud04-project/springcloud10-parent/pom.xml
@@ -17,6 +17,7 @@
         <module>springcloud10-api</module>
         <module>springcloud10-member</module>
         <module>springcloud10-order</module>
+        <module>springcloud10-common</module>
     </modules>
 
     <properties>
@@ -58,6 +59,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <!--springcloud hystrix断路器 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.2.8.RELEASE</version>
         </dependency>
     </dependencies>
     <!--管理依赖-->
