--- a/mayikt/SpringCloud/springcloud05-config/springcloud11-config_server/pom.xml
+++ b/mayikt/SpringCloud/springcloud05-config/springcloud11-config_server/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.mayikt</groupId>
-    <artifactId>springcloud11-eureak-server</artifactId>
+    <artifactId>springcloud11-config_server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springcloud11-eureak-server</name>
+    <name>springcloud11-config_server</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
@@ -41,13 +41,18 @@
             <artifactId>lombok</artifactId>
             <version>1.18.20</version>
         </dependency>
-        <!--springcloud eureka-server 注册中心服务-->
+        <!--springcloud eureka-client 注册中心客户端-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <!--springcloud config-server 配置中心服务端-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
     </dependencies>
-    <!--管理依赖-->
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -65,7 +70,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.5.2</version>
             </plugin>
         </plugins>
     </build>
