--- a/mayikt/SpringCloud/springcloud06-zuul/springcloud13-zuul_gateway/pom.xml
+++ b/mayikt/SpringCloud/springcloud06-zuul/springcloud13-zuul_gateway/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.mayikt</groupId>
-    <artifactId>springcloud12-config_server</artifactId>
+    <artifactId>springcloud13-zuul_gateway</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springcloud12-config_server</name>
+    <name>springcloud13-zuul_gateway</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
@@ -19,10 +19,10 @@
     </properties>
     <dependencies>
         <!--spring-web-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+        </dependency>-->
         <!--spring-test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -46,13 +46,18 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-        <!--springcloud config-server 配置中心服务端-->
+        <!--springcloud zuul 网关-->
+        <!--<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+        </dependency>-->
+        <!--springcloud gateway 网关-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
     </dependencies>
-
+    <!-- 管理依赖 -->
     <dependencyManagement>
         <dependencies>
             <dependency>
