--- a/mayikt/SpringCloud/springcloud06-zuul/springcloud13-zuul_gateway/pom.xml
+++ b/mayikt/SpringCloud/springcloud06-zuul/springcloud13-zuul_gateway/pom.xml
@@ -50,6 +50,7 @@
         <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+            <version>2.2.8.RELEASE</version>
         </dependency>-->
         <!--springcloud gateway 网关-->
         <dependency>
