Dom4j+反射+工厂 手动实现实现Ioc容器

--- a/mayikt/Spring5/mayikt-spring5/pom.xml
+++ b/mayikt/Spring5/mayikt-spring5/pom.xml
@@ -36,6 +36,13 @@
             <artifactId>spring-context</artifactId>
             <version>5.3.9</version>
         </dependency>
+
+        <!--dom4j 解析xml-->
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
     </dependencies>
 
 
