Spring IOC XML方式

--- a/mayikt/Spring5/mayikt02-spring5-aop/pom.xml
+++ b/mayikt/Spring5/mayikt02-spring5-aop/pom.xml
@@ -43,5 +43,12 @@
             <artifactId>dom4j</artifactId>
             <version>1.6.1</version>
         </dependency>
+
+        <!--注解方式整合Aop-->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.6</version>
+        </dependency>
     </dependencies>
 </project>
