--- a/mayikt/Spring5/mayikt02-spring5-aop-annotation/pom.xml
+++ b/mayikt/Spring5/mayikt02-spring5-aop-annotation/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.mayikt</groupId>
-    <artifactId>mayikt02-spring5-aop</artifactId>
+    <artifactId>mayikt02-spring5-aop-annotation</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
