--- a/mayikt/Spring5/mayikt02-spring5-aop-annotation/pom.xml
+++ b/mayikt/Spring5/mayikt02-spring5-aop-annotation/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>5.3.9</version>
+            <version>5.3.8</version>
         </dependency>
         <!--
         这个jar 文件是所有应用都要用到的，它包含访问配置文件、创建和管理bean 以及进行Inversion ofControl / Dependency Injection（IoC/DI）操作相关的所有类。如果应用只需基本的IoC/DI 支持，引入spring-core.jar 及spring-beans.jar 文件就可以了。
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>5.3.9</version>
+            <version>5.3.8</version>
         </dependency>
         <!--
           这个jar 文件为Spring 核心提供了大量扩展。可以找到使用Spring ApplicationContext特性时所需的全部类，JDNI 所需的全部类，instrumentation组件以及校验Validation 方面的相关类。
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.3.9</version>
+            <version>5.3.8</version>
         </dependency>
 
         <!--dom4j 解析xml-->
@@ -44,7 +44,7 @@
             <version>1.6.1</version>
         </dependency>
 
-        <!--注解方式整合Aop-->
+        <!--jdk11 对应aspectjweaver1.9.6-->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
