--- a/mayikt/Spring5/mayikt03_spring5-transactional/pom.xml
+++ b/mayikt/Spring5/mayikt03_spring5-transactional/pom.xml
@@ -59,6 +59,12 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.6</version>
+        </dependency>
     </dependencies>
 
     <build>
