--- a/mayikt/DesignPattern/行为模式/Responsibility_chain/pom.xml
+++ b/mayikt/DesignPattern/行为模式/Responsibility_chain/pom.xml
@@ -41,17 +41,17 @@
             <version>1.18.20</version>
         </dependency>
         <!--orm mybatis-->
-<!--        <dependency>-->
-<!--            <groupId>org.mybatis.spring.boot</groupId>-->
-<!--            <artifactId>mybatis-spring-boot-starter</artifactId>-->
-<!--            <version>2.2.0</version>-->
-<!--        </dependency>-->
-<!--        &lt;!&ndash;mysql连接驱动 最新驱动向下兼容&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>mysql</groupId>-->
-<!--            <artifactId>mysql-connector-java</artifactId>-->
-<!--            <version>8.0.25</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <!--mysql连接驱动 最新驱动向下兼容-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.25</version>
+        </dependency>
         <!--SpringBoot热部署配置 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
