--- a/mayikt/SpringCloud Alibaba/002.Nacos&Ribbon/mayikt_alibaba_nacos/mayikt-member/pom.xml
+++ b/mayikt/SpringCloud Alibaba/002.Nacos&Ribbon/mayikt_alibaba_nacos/mayikt-member/pom.xml
@@ -27,6 +27,13 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
+        <!--openfeign-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
         <!--Google的Java核心库-->
         <dependency>
             <groupId>com.google.guava</groupId>
