--- a/mayikt/SpringCloud Alibaba/003.OpenFeign/mayikt-opefeign-parent/mayikt-service-api/mayikt-member-service-api/pom.xml
+++ b/mayikt/SpringCloud Alibaba/003.OpenFeign/mayikt-opefeign-parent/mayikt-service-api/mayikt-member-service-api/pom.xml
@@ -2,12 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>mayikt-service-api</artifactId>
+        <groupId>org.mayikt</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.mayikt</groupId>
-    <artifactId>mayikt_alibaba_nacos</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>mayikt-member-service-api</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
