--- a/mayikt/SpringCloud Alibaba/003.OpenFeign/mayikt-opefeign-parent/mayikt-service-api/pom.xml
+++ b/mayikt/SpringCloud Alibaba/003.OpenFeign/mayikt-opefeign-parent/mayikt-service-api/pom.xml
@@ -2,12 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>mayikt-opefeign-parent</artifactId>
+        <groupId>org.mayikt</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.mayikt</groupId>
-    <artifactId>mayikt_alibaba_nacos</artifactId>
+    <artifactId>mayikt-service-api</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>mayikt-member-service-api</module>
+        <module>mayikt-order-service-api</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
