--- a/mayikt/SpringCloud Alibaba/003.OpenFeign/mayikt-opefeign-parent/mayikt-service-impl/mayikt-order-service-impl/pom.xml
+++ b/mayikt/SpringCloud Alibaba/003.OpenFeign/mayikt-opefeign-parent/mayikt-service-impl/mayikt-order-service-impl/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>mayikt-order-service-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mayikt</groupId>
+            <artifactId>mayikt-member-service-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
