--- a/mayikt/SpringCloud Alibaba/005.Gateway/mayikt-gateway/src/main/resources/application.yml
+++ b/mayikt/SpringCloud Alibaba/005.Gateway/mayikt-gateway/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
         namespace: public
   #数据库连接
   datasource:
-    url: jdbc:mysql://localhost:3306/mayikt_gateWay?useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/mayikt_gateway?useUnicode=true&characterEncoding=UTF-8
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
