mayikt-sentinel 手动实现限流规则

--- a/mayikt/SpringCloud Alibaba/002.Nacos&Ribbon/mayikt_alibaba_nacos/mayikt-order/pom.xml
+++ b/mayikt/SpringCloud Alibaba/002.Nacos&Ribbon/mayikt_alibaba_nacos/mayikt-order/pom.xml
@@ -59,7 +59,7 @@
             </exclusions>
         </dependency>
     </dependencies>
-
+    <!--管理依赖-->
     <dependencyManagement>
         <dependencies>
             <dependency>
