--- a/mayikt/SpringCloud Alibaba/004.NacosCluster/mayikt_nacos_client/pom.xml
+++ b/mayikt/SpringCloud Alibaba/004.NacosCluster/mayikt_nacos_client/pom.xml
@@ -45,7 +45,7 @@
             </exclusions>
         </dependency>
     </dependencies>
-
+    <!--管理依赖-->
     <dependencyManagement>
         <dependencies>
             <dependency>
