--- a/mayikt/SpringCloud Alibaba/005.Gateway/mayikt-gateway/pom.xml
+++ b/mayikt/SpringCloud Alibaba/005.Gateway/mayikt-gateway/pom.xml
@@ -74,7 +74,7 @@
             </exclusions>
         </dependency>
     </dependencies>
-
+    <!--管理依赖-->
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -118,7 +118,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.3.7.RELEASE</version>
                 <configuration>
-                    <mainClass>com.mayikt.MayiktGatewayApplication</mainClass>
+                    <mainClass>com.mayikt.GatewayApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
