--- a/mayikt/SpringCloud Alibaba/006.Sentinel/mayikt-sentinel/pom.xml
+++ b/mayikt/SpringCloud Alibaba/006.Sentinel/mayikt-sentinel/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mayikt</groupId>
-    <artifactId>mayikt-member</artifactId>
+    <artifactId>mayikt-sentinel</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>mayikt-member</name>
-    <description>Demo project for Spring Boot</description>
+    <name>mayikt-sentinel</name>
+    <description>mayikt-sentinel</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -27,12 +27,17 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
-        <!--openfeign-->
+        <!--alibaba sentinel-->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>3.0.3</version>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
         </dependency>
+        <!--actuator 健康检查-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
 
         <!--Google的Java核心库-->
         <dependency>
@@ -44,7 +49,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.20</version>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -96,7 +101,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.3.7.RELEASE</version>
                 <configuration>
-                    <mainClass>com.mayikt.MayiktMemberApplication</mainClass>
+                    <mainClass>com.mayikt.SentinelApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
