Sentinel整合Nacos创建我们的流控规则

--- a/mayikt/SpringCloud Alibaba/006.Sentinel/mayikt-sentinel/pom.xml
+++ b/mayikt/SpringCloud Alibaba/006.Sentinel/mayikt-sentinel/pom.xml
@@ -22,7 +22,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!--alibaba-nacos-->
+        <!--nacos 注册中心-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
@@ -37,7 +37,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-
+        <!--sentinel 整合nacos -->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+        </dependency>
 
         <!--Google的Java核心库-->
         <dependency>
