--- a/mayikt/SpringCloud Alibaba/006.Sentinel/mayikt-sentinel/src/main/resources/application.yml
+++ b/mayikt/SpringCloud Alibaba/006.Sentinel/mayikt-sentinel/src/main/resources/application.yml
@@ -27,3 +27,16 @@ spring:
         dashboard: localhost:8718
         # 如果有多套网络，又无法正确获取本机IP，则需要使用下面的参数设置当前机器可被外部访问的IP地址，供admin控制台使用
         #client-ip:
+      datasource:
+        flow-ds:
+          nacos:
+            username: nacos
+            password: nacos
+            server-addr: localhost:8848
+            group-id: DEFAULT_GROUP
+            #路由存储规则 flow代表流控规则，degrade代表熔断规则
+            rule-type: flow
+            #读取配置文件的 data-id
+            data-id: mayikt-order-sentinel
+            #读取培配置文件类型为json
+            data-type: json
