注入 sentinelGatewayFilter——Sentinel网关限流过滤器：真正做限流的操作

--- a/mayikt/SpringCloud Alibaba/005.Gateway/mayikt-gateway/src/main/resources/application.yml
+++ b/mayikt/SpringCloud Alibaba/005.Gateway/mayikt-gateway/src/main/resources/application.yml
@@ -13,10 +13,12 @@ spring:
           enabled: true
       #配置路由规则
       routes:
-#        - id: mayikt
-#          uri: http://www.mayikt.com/
-#          predicates:
-#            - Path=/mayikt/**
+        - id: mayikt
+          uri: http://www.mayikt.com/
+          predicates:
+            - Path=/mayikt/**
+          filters:
+            - StripPrefix=1
 #        - id: member
 #          #基于lb负载均衡形式转发
 #          uri: lb://mayikt-member
@@ -51,7 +53,6 @@ spring:
 #          uri: http://www.mayikt.com/
 #          predicates:
 #            - Weight=group1, 2
-
     # Nacos帮助文档: https://nacos.io/zh-cn/docs/concepts.html
     nacos:
       discovery:
