--- a/mayikt/Dubbo/double-quick-start/pom.xml
+++ b/mayikt/Dubbo/double-quick-start/pom.xml
@@ -11,7 +11,8 @@
     <modules>
         <module>mayikt-dubbo-api</module>
         <module>mayikt-dubbo-consumer</module>
-        <module>mayikt-dubbo-provider</module>
+        <module>mayikt-dubbo-provider-20880</module>
+        <module>mayikt-dubbo-provider-20881</module>
     </modules>
 
 </project>
